fix(flamegraph): Make table tooltip invisible when user not hovering on table (#1749)

--- a/packages/pyroscope-flamegraph/src/Tooltip/Tooltip.module.scss
+++ b/packages/pyroscope-flamegraph/src/Tooltip/Tooltip.module.scss
@@ -8,6 +8,7 @@
   font-size: 12px;
   visibility: hidden;
   z-index: 2;
+  pointer-events: none;
 
   &.flamegraphDiffTooltip {
     width: 450px;
